--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -56,6 +56,8 @@
 		float: left;
 		width: $sidebar;
 		padding-right: 0;
+
+		margin-top: 24px;
 	}
 }
 
